examples/test/testpolicy6490.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6490
  namespace: namespace468
spec:
  podSelector:
    matchLabels:
      key17: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value17
          key5: value20
      podSelector:
        matchLabels:
          key10: value20
          key41: value47
          key34: value12
